# smart_analyzer

./: .gitignore  README.md  final_out.txt  pyproject.toml  task_script.py
docs/: ARCHITECTURE.md  CHANGELOG.md  DECISIONS.md  ENTRYPOINTS.md  HANDOFF.md  IMPLEMENTATION_LOGIC.md  PROJECT_PLAYBOOK.md  PROJECT_STATUS.md  README.md  REQUIREMENTS.md  ROADMAP.md  RULES.md  TODO.md  VALIDATION.md  需求说明书.txt
docs/templates/: DECISION_TEMPLATE.md  HANDOFF_TEMPLATE.md  RULE_CHANGE_TEMPLATE.md  STATUS_UPDATE_TEMPLATE.md
outputs/: TCS_打滑控制自动分析报告_summary.docx  TCS_打滑控制自动分析报告_summary.html  tcs_demo_analysis.html  tcs_demo_analysis.json  tcs_demo_analysis.xlsx
outputs_batch/: batch_summary.xlsx  tcs_demo_analysis.html  tcs_demo_analysis.xlsx
outputs_real/: test_dat_tcs_analysis.html
sample_data/: analysis_profile_example.json  tcs_demo.csv
scripts/: build_installer.ps1  gui_smoke_check.py
scripts/packaging/: build_installer.py  installer_bootstrap.py
src/tcs_smart_analyzer/: cli.py  main.py
src/tcs_smart_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/tcs_smart_analyzer/config/: __init__.py  analysis_settings.py  chart_view_state.json  editable_configs.py  interface_mapping.json  interface_mapping.xlsx  kpi_definitions.json  kpi_groups.json  rule_definitions.json  rule_settings.py  rule_thresholds.json  signal_defaults.py
src/tcs_smart_analyzer/core/: __init__.py  engine.py  (+4 more)
tests/: test_editable_configs.py  test_engine_pipeline.py  test_exporters.py  test_loaders.py  test_rule_settings.py  test_signal_mapping.py
(+34 files in other folders)
